<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs</groupId>
	<artifactId>event</artifactId>
	<version>3.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Event Module</name>
	<description>Provides a dev friendly event notifying mechanism</description>
	<url>https://wiki.openmrs.org/display/docs/Event+Module</url>

	<developers>
		<developer>
			<name>OpenMRS</name>
		</developer>
	</developers>

	<organization>
		<name>OpenMRS</name>
		<url>http://openmrs.org</url>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-event.git</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-event.git</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-event/</url>
	  <tag>HEAD</tag>
  </scm>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<properties>
		<openmrsVersion>2.5.0</openmrsVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<version>${openmrsVersion}</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<version>${openmrsVersion}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openmrs.test</groupId>
			<artifactId>openmrs-test</artifactId>
			<version>${openmrsVersion}</version>
			<type>pom</type>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<target>8</target>
						<source>8</source>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.1.1</version>
					<configuration>
						<tagNameFormat>@{project.version}</tagNameFormat>
						<projectVersionPolicyId>SemVerVersionPolicy</projectVersionPolicyId>
						<arguments>-DskipTests -Dmaven.javadoc.skip=true</arguments>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>jdk17</id>
			<activation>
				<jdk>17</jdk>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<version>3.0.0-M5</version>
							<configuration>
								<includes>
									<include>**/*Test.java</include>
								</includes>
								<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>Modules</name>
			<url>https://mavenrepo.openmrs.org/modules</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>https://mavenrepo.openmrs.org/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	
</project>
